<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Farm Connecta</string>

    <string name="application_logo">Application Logo</string>
    <string name="farmconnecta">FarmConnecta</string>
    <string name="person_logo">Person logo</string>
    <string name="share_logo">Share logo</string>
    <string name="menu_logo">Menu logo</string>
    <string name="slogan">WELCOME TO FARM CONNECTA</string>
    <string name="customer">Customer</string>
    <string name="farmer">Farmer</string>
    <string name="reviews">reviews</string>
    <string name="image1" tools:ignore="Typos">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="person_name">Rina</string>
    <string name="message">I used the app to buy fresh produce directly from local farmers and it was a great experience. The app was easy to use, the checkout process was seamless, and the produce was of exceptional quality. I highly recommend this app to anyone looking for a convenient and eco-friendly way to buy fresh produce.</string>
    <string name="sign_up_massage">Not yet registered? Sign Up</string>
    <string name="login">Login</string>
    <string name="phone">Enter your phone number</string>
    <string name="email">Enter your phone email</string>
    <string name="password">Enter your password</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home_page">MainHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="farmconnecta_gmail_com">farmconnecta@gmail.com</string>
    <string name="farmconnectaapp">FarmConnecta</string>
    <string name="fName">Enter First Name</string>
    <string name="lName">Enter Last Name</string>
    <string name="phoneNo">Enter your PhoneNo</string>
    <string name="location">Enter your Location</string>
    <string name="home">Home</string>

    <string name="checkbox">Checkboxes allow the user to select one or more options from a set.
        Typically, you should present each checkbox option in a vertical list. To create each checkbox option,
        create a CheckBox in your layout. Because a set of checkbox options allows the user to select multiple items,
        each checkbox is managed separately and you must register a click listener for each one.</string>
    <string name="imageview">ImageView class is used to display any kind of image resource in the android application
        either it can be android.graphics.Bitmap or android.graphics.drawable.Drawable
        (it is a general abstraction for anything that can be drawn in Android).
        ImageView class or android.widget.ImageView inherits the android.view.View class which is the subclass
        of Kotlin. AnyClass.Application of ImageView is also in applying tints to an image in order to reuse a
        drawable resource and create overlays on background images. Moreover, ImageView is also used to control
        the size and movement of an image.</string>
    <string name="toggle">A toggle button allows the user to change a setting between two states.
        You can add a basic toggle button to your layout with the ToggleButton object.
        Android 4.0 (API level 14) introduces another kind of toggle button called a switch that provides
        a slider control, which you can add with a Switch object.</string>
    <string name="date">A thin wrapper around a millisecond value that allows JDBC to identify this as an SQL DATE
        value. A milliseconds value represents the number of milliseconds that have passed since January 1, 1970 00:00:00.000 GMT.
        To conform with the definition of SQL DATE, the millisecond values wrapped by a java.sql.Date instance
        must be normalized by setting the hours, minutes, seconds, and milliseconds to zero in the particular time zone with which the instance is associated.
        </string>
    <string name="rating">A RatingBar is an extension of SeekBar and ProgressBar that shows a rating in stars.
        The user can touch/drag or use arrow keys to set the rating when using the default size RatingBar.
        The smaller RatingBar style ( R.attr.ratingBarStyleSmall) and the larger indicator-only style
        (R.attr.ratingBarStyleIndicator) do not support user interaction and should only be used as indicators.
        When using a RatingBar that supports user interaction, placing widgets to the left or right of the
        RatingBar is discouraged.</string>
    <string name="time">A thin wrapper around the java.util.Date class that allows the JDBC API to identify
        this as an SQL TIME value. The Time class adds formatting and parsing operations to support the JDBC
        escape syntax for time values.
        The date components should be set to the "zero epoch" value of January 1, 1970 and should not be accessed.
        </string>
    <string name="textview">A TextView displays text to the user and optionally allows them to edit it.
        A TextView is a complete text editor, however the basic class is configured to not allow editing.
        </string>
    <string name="edit">A TextView displays text to the user and optionally allows them to edit it.
        A TextView is a complete text editor, however the basic class is configured to not allow editing.
        </string>
    <string name="camera">The Android framework includes support for various cameras and camera features available on devices, allowing you to capture pictures and videos in your applications.This document discusses a quick, simple approach to image and video capture and outlines an advanced approach for creating custom camera experiences for your users.</string>
    <string name="vegetables">Vegetables</string>
    <string name="farmconnectaName">"  FarmConnecta"</string>
    <string name="appName">FarmConnecta</string>
    <string name="mrp">50 Rs/-</string>
    <string name="login_for_farmer">Login For Farmer</string>
    <string name="review">Review:</string>
    <string name="enter_your_price_per_kg_or_pice">Enter your Price per KG or PICE</string>
    <string name="enter_your_product_quantity_in_kg">Enter your Product Quantity in KG</string>
    <string name="enter_your_current_product_location">Enter your Current Product Location</string>
    <string name="enter_your_product_name">Enter your Product Name</string>
    <string name="submit">Submit</string>
    <string name="categories">Categories:</string>
    <string name="organic_items">Organic items</string>
    <string name="organic_fruits">Organic fruits</string>
    <string name="organic_vegetables">Organic vegetables</string>
    <string name="organic_grains">Organic grains</string>
    <string name="fruits">Fruits</string>
    <string name="grains">Grains</string>
    <string name="other_most_ordered_items">Other most ordered items:</string>
    <string name="ordder_now">ORDDER NOW</string>
    <string name="_1_kg">1 kg</string>
    <string name="riddhi">Riddhi</string>
</resources>