<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerMainHomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start"
            android:text="@string/farmconnecta"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/categories"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Fruits"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img2"
                android:contentDescription="@string/fruits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruits"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Vegetables"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img1"
                android:contentDescription="@string/vegetables" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetables"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Grains"
                android:layout_width="95dp"
                android:layout_height="94dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/grains"
                app:srcCompat="@drawable/img3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grains"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/organicFruits"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img1"
                android:contentDescription="@string/organic_fruits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organic_fruits"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/organicVegetables"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img2"
                android:contentDescription="@string/organic_fruits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organic_vegetables"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/organicGrains"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/img3"
                android:contentDescription="@string/organic_grains" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organic_grains"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/other_most_ordered_items"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

</LinearLayout>